--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
 <link href='https://fonts.googleapis.com/css?family=Cookie' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Fjalla One' rel='stylesheet'>
 <link href="http://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="/css/animate.css" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script> 
 <script src="https://cdn.jsdelivr.net/jquery.typeit/4.4.0/typeit.min.js"></script>
+<script src="animate.js"></script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
@@ -19,175 +22,6 @@
 
 <head>
 
-
-<script>
-new WOW().init();
-
-jQuery(document).ready(function($){
-    $('.type-it').typeIt({
-      speed: 90,
-      startDelay: 3000,
-      cursor: false,
-      autostart: true
-    });
-});
-
-jQuery(document).ready(function($){
-    $('.type-it2').typeIt({
-      speed: 120,
-      cursor: false,
-      lifeLike: false,
-      autostart: true
-
-    });
-});
-
-</script>
-
-<style>
-
-body, html {
-    height: 100%;
-    margin: 0;
-}
-
-
-.bg {
-    background-image: url("city.jpg");
-    height: 100%; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: cover;
-    background-attachment: fixed;
-  }
-
-.bg2 {
-  background-color: #555555;
-}
-
-.bg3{
-  background-image: url("stars.jpg");
-    height: 100%; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-.aboutmebg{
-  background-image: url("black2.jpg");
-  height: 60%;
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover;
-  background-attachment: fixed;
-}
-
-.bg4{
-  background-color: 555555;
-}
-
-h1 { 
-    color: #ffffff; 
-    font-family: 'Cookie';
-    font-size: 90px;
-
-}
-
-h3 {
-    color: #ffffff; 
-    font-family: 'Fjalla One';
-  }
-
-
-p {
-  color: #ffffff;
-  font-family: 'Tahoma';
-  font-size: 20px;
-}
-
-.navbar {
-    margin-bottom: 0;
-}
-
-
-* {box-sizing:border-box}
-
-.skills {
-    text-align: right; 
-    padding-right: 20px; 
-    line-height: 40px; 
-    color: #FFFFFF; 
-}
-
-.html {
-  width: 80%; 
-  background-color: #C433FF;
-}
-
-.css {
-  width: 75%; 
-  background-color: #2196F3;
-} 
-
-.js {
-  width: 70%; 
-  background-color: #33ff49;
-} 
-
-.sql {
-  width: 60%; 
-  background-color: #ff3333;
-} 
-
-.c {
-  width: 60%;
-  background-color: #ff1a75;
-}
-
-.container2 {
-  position: relative;
-  width: 50%;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-  border-radius: 5px;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: #333333;
-}
-
-.container2:hover .overlay {
-  opacity: 0.8;
-}
-
-.text {
-  color: #FFFFFF;
-  font-family: 'Georgia';
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-}
-
-
-
-</style>
 </head>
 <body>
 
